Commit Domain Repository

--- a/ProAgil-App/src/app/app.component.html
+++ b/ProAgil-App/src/app/app.component.html
@@ -1,7 +1,9 @@
+<app-nav></app-nav>
+<br>
 <div class="container">
-  <h1>
-    Welcome to {{ title}}!
-  </h1>
+  <h3>
+    Welcome to {{ title }}!
+  </h3>
   <br>
   <div class="row">
     <div class="col-sm">
@@ -9,7 +11,5 @@
     </div>
   </div>
 </div>
-
-
 
 <router-outlet></router-outlet>
