Enviando parte de CRUD do Evento

--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,11 +1,16 @@
-<div class="form-inline">
-  <div class="form-group mb-2">
-    <label class="mr-2">Filtro: </label>
-    <input type="text"
-      class="form-control mr-2"
-      placeholder="buscar"
-      [(ngModel)]="filtroLista"
-    >
+
+<div class="d-flex">
+  <div class="form-inline mr-auto">
+    <div class="form-group mb-2">
+      <label class="mr-2">Filtro:</label> <input type="text" class="form-control mr-2" placeholder="buscar"
+        [(ngModel)]="filtroLista">
+    </div>
+  </div>
+  <div>
+    <button class="btn btn-outline-primary" (click)="novoEvento(template)">
+      <i class="fa fa-plus-circle"></i> &nbsp;
+      Novo Evento
+    </button>
   </div>
 </div>
 
@@ -17,27 +22,27 @@
     <tr>
       <th>
         <button class="btn btn-outline-primary"
-          (click)="alternarImagem()" >
-          <i class="{{mostrarImagem ? 'fa fa-eye-slash' : 'fa fa-eye'}}"></i>
-        </button>
-      </th>
-      <th>#</th>
-      <th>Tema</th>
-      <th>Local</th>
-      <th>Data</th>
-      <th>Qtd Pessoas</th>
-      <th>Lote</th>
-      <th>Opções</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="eventos && eventos.length">
-    <tr *ngFor="let evento of eventosFiltrados">
+        (click)="alternarImagem()" >
+        <i class="{{mostrarImagem ? 'fa fa-eye-slash' : 'fa fa-eye'}}"></i>
+      </button>
+    </th>
+    <th>#</th>
+    <th>Tema</th>
+    <th>Local</th>
+    <th>Data</th>
+    <th>Qtd Pessoas</th>
+    <th>Lote</th>
+    <th>Opções</th>
+  </tr>
+</thead>
+<tbody *ngIf="eventos && eventos.length">
+  <tr *ngFor="let evento of eventosFiltrados">
     <!-- <tr ng-repeat="evento in eventos | filter:filtroLista"> -->
       <td>
         <img *ngIf="mostrarImagem"
-          src="http://localhost:5000/img/{{evento.imagemURL}}"
-          [style.width.px] = "imagemLargura"
-          [style.margin.px] = "imagemMargem">
+        src="http://localhost:5000/img/{{evento.imagemURL}}"
+        [style.width.px] = "imagemLargura"
+        [style.margin.px] = "imagemMargem">
       </td>
       <td>{{evento.id}}</td>
       <td>{{evento.tema}}</td>
@@ -54,10 +59,10 @@
       </td>
       <td>
         <div class="btn-group">
-          <button class="btn btn-sm btn-success" tooltip="editar" (click)="openModal(template)">
+          <button class="btn btn-sm btn-success" tooltip="editar" (click)="editarEvento(evento, template)">
             <i class="fa fa-edit"></i>
           </button>
-          <button class="btn btn-sm btn-danger" tooltip="excluir">
+          <button class="btn btn-sm btn-danger" tooltip="excluir" (click)="excluirEvento(evento, confirm)">
             <i class="fa fa-eraser"></i>
           </button>
         </div>
@@ -65,27 +70,151 @@
     </tr>
   </tbody>
 
-<tfoot *ngIf="!eventos.length">
-  <tr>
-    <td colspan="7" class="text-center">
-      <h5>Nenhum evento encontrado! </h5>
-    </td>
-  </tr>
-</tfoot>
+  <tfoot *ngIf="!eventos">
+    <tr>
+      <td colspan="7" class="text-center">
+        <h5>
+          Nenhum evento encontrado!
+        </h5>
+      </td>
+    </tr>
+  </tfoot>
 
 </table>
 
-<ng-template #template>
-  <div class="modal-header">
-    <h4 class="modal-title pull-left">Modal</h4>
-    <button type="button" class="close pull-right"
-    aria-label="Close" (click)="modalRef.hide()">
-    <span aria-hidden="true">&times;</span>
-  </button>
+<div bsModal #template="bs-modal" class="modal fade" tabindex="-1"
+role="dialog" aria-labelledby="dialog-sizes-name1">
+<div class="modal-dialog modal-lg">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h4 id="dialog-sizes-name1" class="modal-title pull-left">Evento</h4>
+      <button type="button" class="close pull-right" (click)="template.hide()" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form [formGroup]="registerForm">
+        <div class="form-row">
+          <div class="form-group col-md-12">
+            <label>Tema</label>
+            <input type="text" class="form-control" [ngClass]="{'is-invalid': registerForm.get('tema').errors
+            && registerForm.get('tema').touched}" formControlName="tema" placeholder="Insira o tema">
+            <div *ngIf="registerForm.get('tema').hasError('required') && registerForm.get('tema').touched" class="invalid-feedback">
+              O tema é obrigatório.
+            </div>
+            <div *ngIf="registerForm.get('tema').hasError('minlength') && registerForm.get('tema').touched" class="invalid-feedback">
+              O tema deve ter no mínimo 4 caracteres.
+            </div>
+            <div *ngIf="registerForm.get('tema').hasError('maxlength') && registerForm.get('tema').touched" class="invalid-feedback">
+              O tema deve ter no máximo 50 caracteres.
+            </div>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-8">
+            <label>Local</label>
+            <input type="text" class="form-control" [ngClass]="{'is-invalid': registerForm.get('local').errors
+            && registerForm.get('local').touched}" formControlName="local" placeholder="Insira o local">
+            <div *ngIf="registerForm.get('local').hasError('required') && registerForm.get('local').touched" class="invalid-feedback">
+              O local é obrigatório.
+            </div>
+          </div>
+          <div class="form-group col-md-4">
+            <label>Data e Hora</label>
+            <input type="text"
+            bsDatepicker
+            [bsConfig] = "{ dateInputFormat : 'DD/MM/YYYY hh:mm a' }"
+            class="form-control" [ngClass]="{'is-invalid': registerForm.get('dataEvento').errors
+            && registerForm.get('dataEvento').touched}" formControlName="dataEvento" placeholder="Insira a data hora">
+            <div *ngIf="registerForm.get('dataEvento').hasError('required') && registerForm.get('dataEvento').touched" class="invalid-feedback">
+              A data evento é obrigatória.
+            </div>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-3">
+            <label>Qtd Pessoas</label>
+            <input type="number" class="form-control" [ngClass]="{'is-invalid': registerForm.get('qtdPessoas').errors
+            && registerForm.get('qtdPessoas').touched}" formControlName="qtdPessoas" placeholder="Insira a quantidade">
+            <div *ngIf="registerForm.get('qtdPessoas').hasError('required') && registerForm.get('qtdPessoas').touched" class="invalid-feedback">
+              A quantidade de pessoas é obrigatória.
+            </div>
+            <div *ngIf="registerForm.get('qtdPessoas').hasError('max') && registerForm.get('qtdPessoas').touched" class="invalid-feedback">
+              A quantidade máxima de pessoas permitida é 120.000.
+            </div>
+          </div>
+          <div class="form-group col-md-9">
+            <label>Imagem</label>
+            <input type="text" class="form-control" [ngClass]="{'is-invalid': registerForm.get('imagemURL').errors
+            && registerForm.get('imagemURL').touched}" formControlName="imagemURL" placeholder="Insira a URL da imagem">
+            <div *ngIf="registerForm.get('imagemURL').hasError('required') && registerForm.get('imagemURL').touched" class="invalid-feedback">
+              A imagem é obrigatória.
+            </div>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-4">
+            <label>Telefone</label>
+            <input type="text" class="form-control" [ngClass]="{'is-invalid': registerForm.get('telefone').errors
+            && registerForm.get('telefone').touched}" formControlName="telefone" placeholder="Insira o telefone">
+            <div *ngIf="registerForm.get('telefone').hasError('required') && registerForm.get('telefone').touched" class="invalid-feedback">
+              O telefone é obrigatório.
+            </div>
+          </div>
+          <div class="form-group col-md-8">
+            <label>Email</label>
+            <input type="text" class="form-control" [ngClass]="{'is-invalid': registerForm.get('email').errors
+            && registerForm.get('email').touched}" formControlName="email" placeholder="Insira o e-mail">
+            <div *ngIf="registerForm.get('email').hasError('required') && registerForm.get('email').touched" class="invalid-feedback">
+              O email é obrigatório.
+            </div>
+            <div *ngIf="registerForm.get('email').hasError('email') && registerForm.get('email').touched" class="invalid-feedback">
+              O campo e-mail não está no formato correto.
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer d-flex">
+      <button class="btn btn-secondary" (click)="template.hide()">
+        Fechar
+      </button>
+      <button class="btn btn-primary ml-auto" [disabled]="!registerForm.valid" (click)="salvarAlteracao(template)">
+        Salvar Alterações
+      </button>
+    </div>
+    <p>Form Value: {{registerForm.value | json}}</p>
+    <p>Form Status: {{registerForm.status | json}}</p>
+  </div>
 </div>
-<div class="modal-body">
-  This is a modal.
 </div>
-</ng-template>
+
+<div bsModal #confirm="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="dialog-sizes-name1">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">
+          Deletando Evento
+        </h4>
+        <button type="button" class="close pull-right" (click)="confirm.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>{{bodyDeletarEvento}}</p>
+      </div>
+      <div class="modal-footer btn-group d-flex">
+        <button type="button" class="btn btn-outline-primary" (click)="confirm.hide()">
+          CENCELAR
+        </button>
+        <button type="button" class="btn btn-outline-danger" (click)="confirmeDelete(confirm)">
+          DELETAR
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<br>
 
 
