--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -3,7 +3,7 @@
   <div class="form-inline mr-auto">
     <div class="form-group mb-2">
       <label class="mr-2">Filtro:</label> <input type="text" class="form-control mr-2" placeholder="buscar"
-        [(ngModel)]="filtroLista">
+      [(ngModel)]="filtroLista">
     </div>
   </div>
   <div>
@@ -40,7 +40,7 @@
     <!-- <tr ng-repeat="evento in eventos | filter:filtroLista"> -->
       <td>
         <img *ngIf="mostrarImagem"
-        src="http://localhost:5000/img/{{evento.imagemURL}}"
+        src="http://localhost:5000/Resources/Images/{{evento.imagemURL}}?_ts{{dataAtual}}"
         [style.width.px] = "imagemLargura"
         [style.margin.px] = "imagemMargem">
       </td>
@@ -146,8 +146,19 @@ role="dialog" aria-labelledby="dialog-sizes-name1">
           </div>
           <div class="form-group col-md-9">
             <label>Imagem</label>
-            <input type="text" class="form-control" [ngClass]="{'is-invalid': registerForm.get('imagemURL').errors
-            && registerForm.get('imagemURL').touched}" formControlName="imagemURL" placeholder="Insira a URL da imagem">
+            <table>
+              <tr>
+                <td>
+                  <button class="btn btn-success" (click)="file.click()">Enviar Imagem</button>
+                  <input type="file" #file class="form-control" [ngClass]="{'is-invalid': registerForm.get('imagemURL').errors
+                  && registerForm.get('imagemURL').touched}"
+                  (change)="onFileChange($event)"
+                  formControlName="imagemURL" placeholder="Insira a URL da imagem"
+                  style="display: none;">
+                </td>
+              </tr>
+            </table>
+
             <div *ngIf="registerForm.get('imagemURL').hasError('required') && registerForm.get('imagemURL').touched" class="invalid-feedback">
               A imagem é obrigatória.
             </div>
@@ -185,9 +196,9 @@ role="dialog" aria-labelledby="dialog-sizes-name1">
       </button>
     </div>
     <!-- <p>Form Value: {{registerForm.value | json}}</p>
-    <p>Form Status: {{registerForm.status | json}}</p> -->
+      <p>Form Status: {{registerForm.status | json}}</p> -->
+    </div>
   </div>
-</div>
 </div>
 
 <div bsModal #confirm="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="dialog-sizes-name1">
